# yggtorrent_tracker_fixerr

./: .dockerignore  .env.dist  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/classic/: devcontainer.json
.devcontainer/rootless/: devcontainer.json
.github/: dependabot.yml
.github/actions/bootstrap/: action.yaml  actions.yaml
.github/workflows/: cd-build.yml  cd-release.yaml  ci-bandit.yaml  ci-mypy.yaml  ci-pip-audit.yaml  ci-ruff.yaml  schedule-pip-audit.yaml  schedule-pre-commit.yaml  schedule-updatecli.yaml
.updatecli/: update-uv.yaml
yggtorrent_tracker_fixerr/: api.py  arr.py  scheduled.py  utils.py
yggtorrent_tracker_fixerr/Classes/: QBittorrent.py  Settings.py  TorrentClient.py
