[project]
name = "yggtorrent_tracker_fixerr"
version = "1.0.0"
description = "Allow automation of YGGTorrent inside arr stack"
readme = "README.md"
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "litestar[standard]>=2.18.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "commitizen>=4.10.0",
    "mypy>=1.19.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.5.0",
    "python-semantic-release>=10.5.2",
    "ruff>=0.14.7",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["yggtorrent_tracker_fixerr"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = """
  uv lock --upgrade-package "yggtorrent_tracker_fixerr"
  git add uv.lock
"""
